# Cpp_for_programmerere

./: README.md
solution1/: CMakeLists.txt  taskA.cpp  taskB.cpp  temperaturer.txt
solution2/: CMakeLists.txt  oppg1.cpp  oppg2.cpp  oppg3.cpp  oppg4.cpp  oppg5.cpp  oppg6.cpp
solution3/: CMakeLists.txt  Circle.cpp  commodity.cpp  commodity.hpp  oppgave2.cpp  oppgave4.cpp
solution4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
solution5/: CMakeLists.txt  main.cpp
solution6/: CMakeLists.txt  main.cpp  web_server.cpp
solution7/: CMakeLists.txt  Oppgave1b.txt  fraction.cpp  fraction.hpp  fraction_test.cpp  main.cpp  set.cpp  set.hpp
solution8/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  pair.cpp
solution9/: CMakeLists.txt  main.cpp
