cmake_minimum_required(VERSION 2.8)

project(solution2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(solution2.1 oppg1.cpp)
add_executable(solution2.2 oppg2.cpp)
add_executable(solution2.3 oppg3.cpp)
add_executable(solution2.4 oppg4.cpp)
add_executable(solution2.5 oppg5.cpp)
add_executable(solution2.6 oppg6.cpp)